--- a/src/app/pokedex/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-card/pokemon-card.component.html
@@ -1,5 +1,5 @@
-<section>
-    <div>
+<main>
+    <section>
         <span>{{ formatPokemonId(pokemon.id) }}</span>
         <h2>{{ formatPokemonName(pokemon.name) }}</h2>
         @for(type of pokemon.types; track $index) {
@@ -10,9 +10,9 @@
             </div>
         </div>
     }
-    </div>
+</section>
 
     <div>
         <img [src]="pokemon.sprites.other?.['official-artwork']?.front_default">
     </div>
-</section>
+</main>
