style: added pokedex img and adjusted content position to fit the displays place

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,6 +1,10 @@
-<app-header></app-header>
+<section>
+    <img src="assets/img/pokedex-bg.webp" alt="">
+    <app-header></app-header>
 <main>
     @for(pokemon of PokeService.loadedPokemons; track $index) {
         <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
     }    
 </main>
+</section>
+
