--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -5,9 +5,23 @@
     gap: 20px;
 }
 
+section{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    >img{
+        width: 100%;
+        height: 100vh;
+    }
+}
+
 main{
+    overflow-y:scroll;
+    position:absolute;
+    top:30%;
     display: flex;
     justify-content: center;
     flex-flow: wrap;
     gap: 20px;
+    height: 50%
 }
