style: adjusted position of nav button

--- a/src/app/pokedex/header/header.component.html
+++ b/src/app/pokedex/header/header.component.html
@@ -1,5 +1,7 @@
 <nav>
-    <button> <img [src]="'assets/icons/iconoir_pokeball.png'" alt="">Pokedex</button>
-    <button> <img [src]="'assets/icons/PokePin.png'" alt="">Regions</button>
+    <div>
+        <button> <img [src]="'assets/icons/iconoir_pokeball.png'" alt="">Pokedex</button>
+        <button> <img [src]="'assets/icons/PokePin.png'" alt="">Regions</button>
+    </div>
     <button> <img [src]="'assets/icons/PokeHeart.png'" alt="">Favorites</button>
 </nav>
