--- a/src/app/pokedex/header/header.component.scss
+++ b/src/app/pokedex/header/header.component.scss
@@ -1,14 +1,27 @@
-nav{
+nav {
     position: absolute;
     top: 20%;
+    left: 7%;
+    right: 8%;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     padding: 1.125rem;
-    >button{
+
+    >div {
+        display: flex;
+        justify-content: center;
+        width: 50%;
+        gap: 6.25rem;
+    }
+
+    button {
         border-style: none;
+        background-color: transparent;
         display: flex;
         justify-content: center;
         align-items: center;
         gap: .5rem;
+        font-size: 20px;
     }
 }
