--- a/src/app/pokedex/header/header.component.scss
+++ b/src/app/pokedex/header/header.component.scss
@@ -10,8 +10,8 @@ nav {
 
     >div {
         display: flex;
-        justify-content: center;
-        width: 50%;
+        justify-content: space-between;
+        width: 33%;
         gap: 6.25rem;
     }
 
