--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,10 @@
-<p>pokemon-list works!</p>
+<main>
+        <app-pokemon-sorter></app-pokemon-sorter>
+    <section>
+        @for(pokemon of PokeService.loadedPokemons; track $index) {
+            <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
+        }
+    </section>
+    
+</main>
+  
