--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -1,18 +1,19 @@
 :host{
     grid-area: pokemon-list;
+    height: 100%;
+    width: 16.25rem;
 }
 
 main{
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow: hidden;
 }
 
 section{
-    height: 100%;
+    max-height: 88vh;
     overflow-y: scroll;
-
-    
 }
 
 ::-webkit-scrollbar {
