feat: started creating and styling pokemon sorter

--- a/src/app/pokedex/pokemon-list/pokemon-sorter/pokemon-sorter.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-sorter/pokemon-sorter.component.html
@@ -1,1 +1,15 @@
-<p>pokemon-sorter works!</p>
+<main>
+    <div class="sort-by-region-btn">All</div>
+    <section class="sort-by-btn">
+        <div>
+            <div>
+                <span>Name</span>
+                <img src="" alt="">
+            </div>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+    </section>
+
+</main>
