--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
+@use "font.scss" as *;
+
 body{
     margin: 0;
     box-sizing: border-box;
     background-color: whitesmoke;
+    font-family: "Raleway", sans-serif;
 }
