refactor: structured top bar

--- a/src/app/pokedex/top-bar/top-bar.component.html
+++ b/src/app/pokedex/top-bar/top-bar.component.html
@@ -1,1 +1,19 @@
-<p>top-bar works!</p>
+<main>
+
+    <section class="pokedex-logo">
+        <img src="./assets/icons/PokedexLogo.png" alt="">
+        <span>Pokedex</span>
+    </section>
+
+    <section class="pokemon-main-info">
+        <div>
+            <div>
+                <span>N° 69</span>
+                <span>Pokemon Type</span>
+            </div>
+            <span>Pokemon Name</span>
+        </div>
+        <app-searchbar></app-searchbar>
+
+    </section>
+</main>
