refactor: started with structure of pokemon overview

--- a/src/app/pokedex/pokemon-overview/pokemon-overview.component.html
+++ b/src/app/pokedex/pokemon-overview/pokemon-overview.component.html
@@ -1,1 +1,30 @@
-<p>pokemon-overview works!</p>
+<main>
+    <section>
+        <div>
+            <img src="" alt="pokemon">
+        </div>
+        <div>
+            <span>Height: </span>
+            <span>Weight: </span>
+            <span>Gender: </span>
+        </div>
+    </section>
+    <section>
+        <nav>
+            <ul>Description</ul>
+            <ul>Where to Find</ul>
+            <ul>Habilities</ul>
+        </nav>
+    </section>
+    <section>
+        <div>
+            <!-- diagram with pokemon stats -->
+        </div>
+        <div>
+            <!-- pokemon evolutions -->
+        </div>
+    </section>
+    <section>
+        <!-- list of pokemon moves -->
+    </section>
+</main>
