feat: render pokemoninformation when clicking of pokemon "card"

--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -1,8 +1,8 @@
 <main>
         <app-pokemon-sorter></app-pokemon-sorter>
     <section>
-        @for(pokemon of PokeService.loadedPokemons; track $index) {
-            <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
+        @for(pokemon of pokeService.loadedPokemons; track $index) {
+            <app-pokemon-card (click)="renderPokemonInformations(pokemon)" [pokemon]="pokemon"></app-pokemon-card>
         }
     </section>
     
