--- a/src/app/pokedex/pokemon-overview/pokemon-overview.component.scss
+++ b/src/app/pokedex/pokemon-overview/pokemon-overview.component.scss
@@ -1,3 +1,78 @@
-:host{
+:host {
     grid-area: pokemon-overview;
+    // background: rgb(255, 71, 71);
+    // background: radial-gradient(circle, rgba(255, 71, 71, 1) 0%, rgba(240, 33, 33, 1) 45%, rgba(182, 24, 24, 1) 100%);
+}
+
+
+main {
+    display: grid;
+    grid-template-areas:
+        "pokemon-img-ctn pokemon-stats-diagramm pokemon-moves"
+        "pokemon-info-nav pokemon-evolutions pokemon-moves";
+    grid-template-columns: 50% 1.5fr 1fr;
+    grid-template-rows: 50% 1fr;
+    width: 100%;
+    height: 100%;
+
+    .pokemon-img-ctn {
+        grid-area: pokemon-img-ctn;
+    }
+
+    .pokemon-stats-diagramm {
+        grid-area: pokemon-stats-diagramm;
+    }
+
+    .pokemon-moves {
+        grid-area: pokemon-moves;
+    }
+
+    .pokemon-info-nav {
+        grid-area: pokemon-info-nav;
+    }
+
+    .pokemon-evolutions {
+        grid-area: pokemon-evolutions;
+    }
+}
+
+.pokemon-img {
+    >img {
+        width: 280px;
+    }
+}
+
+
+
+.pokemon-main-data {
+    display: flex;
+    justify-content: space-between;
+    gap: .75rem
+}
+
+.gender-ctn {
+    display: flex;
+    gap: .75rem;
+
+    .gender-icons {
+        display: flex;
+        gap: .25rem;
+
+        >div {
+            display: none;
+        }
+    }
+
+}
+
+.male,
+.female,
+.genderless {
+    display: flex !important;
+
+    >img {
+        width: 18px;
+        height: 18px;
+        object-fit: contain;
+    }
 }
