--- a/src/app/pokedex/pokemon-overview/pokemon-overview.component.html
+++ b/src/app/pokedex/pokemon-overview/pokemon-overview.component.html
@@ -1,30 +1,39 @@
 <main>
-    <section>
-        <div>
-            <img src="" alt="pokemon">
+    <section class="pokemon-img-ctn">
+        <div class="pokemon-img">
+            <img src="{{ pokemonData?.sprites?.other['official-artwork'].front_default }}" alt="pokemon">
         </div>
-        <div>
-            <span>Height: </span>
-            <span>Weight: </span>
-            <span>Gender: </span>
+        <div class="pokemon-main-data">
+            <span>Height: {{ pokemonData?.height / 10}}m </span>
+            <span>Weight: {{ pokemonData?.weight / 10}}kg </span>
+            <div class="gender-ctn">
+                <span>Gender:</span>
+                <div class="gender-icons">
+                    <div [ngClass]="{'male': male}"><img src="assets/icons/male.svg" alt=""></div>
+                    <div [ngClass]="{'female': female}"><img src="assets/icons/female.svg" alt=""></div>
+                    <div [ngClass]="{'genderless': genderless}"><img src="assets/icons/genderless.svg" alt=""></div>
+                </div>      
+            </div>
         </div>
     </section>
-    <section>
+    <section class="pokemon-stats-diagramm">
+        <div>
+            <!-- diagram with pokemon stats -->
+        </div>
+    </section>
+    <section class="pokemon-info-nav">
         <nav>
             <ul>Description</ul>
             <ul>Where to Find</ul>
             <ul>Habilities</ul>
         </nav>
     </section>
-    <section>
-        <div>
-            <!-- diagram with pokemon stats -->
-        </div>
+    <section class="pokemon-evolutions">
         <div>
             <!-- pokemon evolutions -->
         </div>
     </section>
-    <section>
-        <!-- list of pokemon moves -->
+    <section class="pokemon-moves">
+        <!-- list of pokemon moves, maybe create component for this -->
     </section>
 </main>
